# armv6m-intrinsics

./: CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md
.github/: dependabot.yml
include/armv6m-intrinsics/: barriers.hpp  hints.hpp  interrupts.hpp  reverse.hpp  svc.hpp
